sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:9: error: illegal start of simple expression
    for (i<- debut to fin)){
                          ^